2009-08-01  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* main_file.h (tino_put_ansi): as the name now is in put.h,
	renamed to tino_main_put_ansi

	* put.h: added

2009-07-31  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* err.h (tino_verr_new): corrected

	* fileerr.h (tino_file_open_readA, tino_file_open_rwA): added
	(tino_file_closeA): added

2009-07-30  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* err.h (tino_verr_new): added last letter support ('C' to 'F')
	and ignore errno support (hopefully this does not break things
	which depend on the new error handler).

2009-07-28  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* file.h (tino_file_open_createI, tino_file_openI): added
	(tino_file_open_createE, tino_file_openE): corrected

2009-07-02  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* Makefile.awk: fixed to take correct count, as "for (k in a)" now
	iterates in an arbitrary sequence.

	* fileerr.h (tino_file_open_createA): and many others added

2009-06-24  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* main_file.h (tino_main_file): Prototype changed to support
	future flags and options.  Also usage now is mostly implicite,
	making it even more easy to write wrappers quickly.  (Note that
	SHIT support is planend, too, for the future.)

2009-05-27  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* num.h (tino_num_secondsA): added

2009-05-26  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* aux.h (tino_aux_timestampOn): added (and many other routines in
	this module)

	* arg.h (tino_snprintf_ret): added

	* dirty.h (tino_strxcpy): added

	* data_tool.h (tino_data_timestampO): added

2009-05-21  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* sysfix_cygwin.h: sighandler_t added for CygWin which does not
	define it.

2009-04-09  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* slist.h (tino_slist_add): now uses tino_glist_add_ptr()
	(tino_glist_add_ptr): added

	* alloc.h (TINO_FREE_NULL): now no more modifies errno
